# blockchain-protocol-experiment

./: .gitmodules  Cargo.toml  README.md
algo/: Cargo.toml  README.md
algo/src/: lib.rs
algo/src/dsa/: mod.rs
algo/src/dsa/algorithms/: bfs.rs  binary_search.rs  bubble_sort.rs  dfs.rs  mod.rs
algo/src/dsa/graphs/: adjacency_list.rs  dag.rs  mod.rs
algo/src/dsa/trees/: avl_tree.rs  b_tree.rs  binary_tree.rs  mod.rs  patricia_trie.rs  red_black_tree.rs  splay_tree.rs  treap.rs  two_three_tree.rs
algo/src/leetcode/: mod.rs
algo/src/leetcode/graph_traversal/: alien_dictionary.rs  course_schedule_ii.rs  critical_connections.rs  mod.rs  number_of_islands.rs  reconstruct_itinerary.rs  word_ladder_ii.rs
algo/src/leetcode/hashing/: contiguous_array.rs  find_all_anagrams.rs  group_anagrams.rs  longest_consecutive_sequence.rs  mod.rs  subarray_sum_equals_k.rs  two_sum.rs
algo/src/leetcode/recursion_divide_conquer/: decode_ways.rs  flatten_nested_list_iterator.rs  maximum_subarray.rs  merge_k_sorted_lists.rs  mod.rs
algo/src/leetcode/sliding_window/: longest_repeating_char_replace.rs  longest_substring_no_repeat.rs  minimum_window_substring.rs  mod.rs  sliding_window_maximum.rs  subarrays_k_different.rs
algo/src/leetcode/tree_traversal/: add_search_words.rs  binary_tree_max_path_sum.rs  implement_trie.rs  lca_bst.rs  mod.rs  serialize_deserialize_bt.rs  word_search_ii.rs
automate/: .env  Cargo.toml  README.md  class-config.toml  config.example.toml  config.test.toml
automate/contract/: .gitignore  deploy_logs.txt  deploy_logs2.txt  deploy_logs3.txt  deploy_logs4.txt  deploy_logs5.txt  deploy_logs6.txt  deploy_logs7.txt
automate/contract/broadcast/DeployForClass.sol/1/: run-1775219930123.json  run-latest.json
automate/contract/broadcast/DeployForClass.sol/11155111/: run-1775220132817.json  run-latest.json
automate/contract/script/: DeployAnvil.s.sol  DeployForClass.sol  TestDump.s.sol
automate/contract/src/: AutomateRegistry.sol  ClassAuto.sol  IAutomatable.sol
automate/contract/test/: AutomateRegistry.t.sol  Debugger.t.sol  MockAutomatable.sol
automate/crates/config/: Cargo.toml
automate/crates/config/src/: lib.rs
automate/crates/contract-bindings/: Cargo.toml
automate/crates/contract-bindings/src/: lib.rs
automate/crates/executor/: Cargo.toml
automate/crates/executor/src/: lib.rs
automate/crates/primitives/: Cargo.toml
automate/crates/primitives/src/: lib.rs  shared.rs
automate/crates/runtime/: Cargo.toml
automate/crates/runtime/src/: main.rs
automate/crates/shared/: Cargo.toml
automate/crates/tasks/: Cargo.toml
automate/crates/tasks/src/: executor.rs  lib.rs  trigger.rs
automate/crates/trigger/: Cargo.toml
automate/crates/trigger/src/: lib.rs
crates/pod-core/: Cargo.toml
crates/pod-core/src/: utils.rs
crates/pod-core/src/db/: mod.rs
crates/pod-core/src/primitives/: errors.rs  mod.rs  pod.rs  replica.rs
crates/tx-processor/src/: evm.rs  lib.rs  riscv.rs
pod-network/: Cargo.toml  README.md
pod-network/crates/pod-core/: Cargo.toml
pod-network/crates/pod-core/src/: utils.rs
pod-network/crates/pod-core/src/primitives/: clients.rs  errors.rs
pod-network/crates/tx-processor/: Cargo.toml
pod-network/crates/tx-processor/src/: riscv.rs
pod-network/smart-contracts/: README.md
pod-network/smart-contracts/src/: Time.sol
pod-network/smart-contracts/src/utils/: Context.sol
pod-network/smart-contracts/src/verifier/: ECDSA.sol
pod-network/smart-contracts/test/: ECDSA.t.sol  PodRegistry.t.sol  Time.t.sol
pod-network/smart-contracts/test/mocks/: PodTxInfoMock.sol  TimeWrapper.sol
precompile-counts/: Cargo.toml  README.md  run_inspector_test.sh  tests.rs
precompile-counts/blocks/: n21500050-21500050.json
precompile-counts/play_blocks/: n24625512-24625515.json
precompile-counts/src/: block_env.rs  cache.rs  cli.rs  executor.rs  fork_db.rs  inspector.rs  main.rs  overlay_db.rs  provider.rs  rpc_server.rs  test.rs  types.rs  xatu.rs
server-experiment/: BENCHMARK_REPORT.md  Cargo.toml  run_benchmarks.sh
server-experiment/proto/: service.proto
server-experiment/src/: client.rs  main.rs  pb.rs  server.rs
smart-contracts/src/: FastTypes.sol  Quorum.sol
smart-contracts/src/interfaces/: IPodRegistry.sol
smart-contracts/src/verifier/: MerkleTree.sol  PodECDSA.sol  PodRegistry.sol
smart-contracts/test/: Context.t.sol  Merkle.t.sol  PodECDSA.t.sol  Quorum.t.sol
smart-contracts/test/mocks/: PodMockQuorum.sol  PodTimestampMock.sol
witness-tcp/: Cargo.toml  README.md  benchmark_output.txt  client.js  client.ts  package-lock.json  package.json  run_benchmarks.sh  spec.md
witness-tcp/src/: client.rs  framing.rs  main.rs  payload.rs  server.rs
witness-transport/: BENCHMARK.md
witness-transport/client/: Cargo.toml
witness-transport/client/src/: main.rs
witness-transport/server/: Cargo.toml
witness-transport/server/src/: main.rs
