[workspace]
members = [
    "crates/tasks", 
    "crates/primitives", 
    "bin/automate",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "0.9", features = [
    "full",
    "node-bindings",
    "providers",
    "signers",
    "signer-local",
    "sol-types",
    "contract",
    "network",
    "rpc-types",
    "transport-http",
    "transport-ws",
    "pubsub",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "=1.0.209", features = ["derive"] }
toml = "0.8"
thiserror = "2"
reqwest = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
