[package]
name = "eth-fork-node"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.7.3", features = ["full", "rpc-types-eth", "node-bindings", "rpc-client", "reqwest", "k256"] }
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive", "env"] }
dashmap = "6.1.0"
eyre = "0.6.12"
hex = "0.4.3"
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
lru = "0.16.3"
parking_lot = "0.12.5"
revm = { version = "36.0.0", features = ["optional_no_base_fee", "optional_balance_check", "optional_block_gas_limit"] }
revm-primitives = "22.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
