[package]
name = "server-experiment"
version = "0.1.0"
edition = "2021"
authors = ["Gregg"]

[dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["io"] }

# Bytes & Streams
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Raw TCP - tokio::net included in full

# HTTP/2
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.1"

# gRPC
tonic = "0.11"
prost = "0.12"

# QUIC
quinn = "0.10"
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
rcgen = "0.11"

# Logging & Errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
