[package]
name = "witness-tcp"
version = "0.1.0"
edition = "2021"
authors = ["Gregg"]
description = "Lightweight TCP Wire Protocol for Execution Witnesses"

[dependencies]
# Async I/O
tokio = { version = "1.37", features = ["full"] }

# Utilities
bytes = "1.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
