[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.22"
http-body-util = "0.1"
bytes = "1.0"
