[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
shared = { path = "../shared" }
trigger = { path = "../trigger" }
executor = { path = "../executor" }
contract-bindings = { path = "../contract-bindings" }

alloy.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
